--- a/horizontalstackedchartview/src/main/res/values/colors.xml
+++ b/horizontalstackedchartview/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="default_bar_color">#F5F5F5</color>
+    <color name="default_legend_text_color">#000000</color>
+    <color name="default_legend_icon_color">#000000</color>
 </resources>
