--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,19 +11,11 @@
         android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_gravity="center"
+        android:layout_gravity="top"
         android:layout_margin="10dp"
         app:BarCornerRadius="8"
         app:barColor="@color/gray"
         app:legendHorizontal="true"
         app:legendSize="15sp" />
 
-    <com.mrapps.horizontalstackedchartview.LegendView
-        android:id="@+id/legend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:legendSize="16dp"
-        app:legendHorizontal="true"/>
-
-</LinearLayout>
+</FrameLayout>
