--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp" />
 
+    <com.mrapps.horizontalstackedbarview.LegendView
+        android:id="@+id/legendView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp" />
+
+
+
 </LinearLayout>
