--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,11 +53,8 @@
 
         <com.mrapps.horizontalstackedbarview.LegendView
             android:id="@+id/legendView2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerVertical="true"
             android:layout_margin="10dp" />
 
         <com.mrapps.horizontalstackedbarview.HorizontalStackedBarChartView
@@ -75,6 +72,5 @@
             app:orientation="vertical" />
 
     </RelativeLayout>
-
 
 </LinearLayout>
