--- a/horizontalstackedbarview/src/main/res/values/attrs.xml
+++ b/horizontalstackedbarview/src/main/res/values/attrs.xml
@@ -11,5 +11,11 @@
         </attr>
     </declare-styleable>
 
+    <style name="DefaultLegendTextStyle">
+        <item name="android:textColor">@color/default_legend_text_color</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
 
 </resources>
